<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_account_deletion"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_action_cannot_be_reversed_enter_your_password_to_confirm"
        android:textSize="14sp"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:enabled="false"
        android:textAllCaps="true"
        style="@style/UpdateButtonStyle"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/WorkoutDoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="6dp" />
</LinearLayout>
