<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/titleChangeUsername"
        style="@style/ProfileSectionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/change_username" />


    <TextView
        style="@style/ValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/editUsername"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:inputType="textNoSuggestions|textVisiblePassword"
        />


    <TextView
        android:id="@+id/userNameError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />


    <Button
        android:id="@+id/btnUpdateUserName"
        style="@style/UpdateButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:text="@string/update" />
</LinearLayout>
