<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/titleUpdatePassword"
        style="@style/ProfileSectionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/update_password" />


    <TextView
        style="@style/ValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password" />


    <EditText
        android:id="@+id/editPassword"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:maxLength="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnUpdatePassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:text="@string/update"
        style="@style/UpdateButtonStyle"  />
</LinearLayout>
