<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerLayout"
    style="@style/ItemContainerStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp">



    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivFoodIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="centerCrop"
        android:src="@drawable/food_plate"
        android:contentDescription="@string/food_icon"
        app:shapeAppearanceOverlay="@style/RoundedImage" />



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDate"
            style="@style/FoodItemDateTextStyleFuture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvSubtitle"
            style="@style/FoodItemTitleTextStyleFuture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_view_or_log_meals" />
    </LinearLayout>


    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/forward_arrow"
        android:src="@drawable/outline_chevron_right_24"
         />

</LinearLayout>
